fix(style): Fix alignment of event lists on front page & events page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -767,6 +767,8 @@ $item-gutter: 1em;
       display: inline-block;
       padding-right: 6%;
       width: 47%;
+      vertical-align: top;
+      box-sizing: border-box;
 
       &:nth-child(3n) {
         padding-right: 0;
